# archflow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  deploy-pages.yml  publish-python.yml
apps/vscode/: language-configuration.json  package.json
apps/vscode/src/: extension.ts
apps/vscode/syntaxes/: archflow.tmLanguage.json
crates/archflow-cli/: Cargo.toml
crates/archflow-cli/src/: main.rs
crates/archflow-core/: Cargo.toml
crates/archflow-core/src/: dsl.rs  error.rs  layout.rs  lib.rs  model.rs  render.rs  scene.rs  theme.rs
crates/archflow-ffi/: Cargo.toml
crates/archflow-ffi/src/: lib.rs
crates/archflow-wasm/: Cargo.toml
crates/archflow-wasm/src/: lib.rs
docs/: index.html
docs/css/: style.css
docs/js/: app.js  cm-archflow.js  examples.js  monaco-archflow.js  parser.js  playground.js
examples/: azure-webapp.archflow  basic.json  hero_dark.archflow  hero_default.archflow  microservices.archflow  serverless.archflow
python/: pyproject.toml
python/archflow/: __init__.py  cluster.py  connect.py  diagram.py  node.py  resolver.py
python/archflow/providers/: aws.py  k8s.py
python/examples/: basic.py  ci_cd.py  data_pipeline.py  event_driven.py  microservices.py  web_service.py
schemas/: diagram-ir.schema.json
