[workspace]
resolver = "2"
members = [
    "crates/archflow-core",
    "crates/archflow-cli",
    "crates/archflow-ffi",
    "crates/archflow-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/soulee-dev/archflow"
description = "Diagram-as-Code platform powered by Rust"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
archflow-core = { path = "crates/archflow-core" }
