[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "archflow"
version = "0.1.0"
description = "Diagram-as-Code platform with Rust core engine"
requires-python = ">=3.9"
license = { text = "MIT" }
urls = { Repository = "https://github.com/soulee-dev/archflow" }

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.maturin]
manifest-path = "../crates/archflow-ffi/Cargo.toml"
python-source = "."
module-name = "archflow._archflow_rust"
