[package]
name = "archflow-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Archflow diagram rendering"

[[bin]]
name = "archflow"
path = "src/main.rs"

[dependencies]
archflow-core.workspace = true
clap = { version = "4", features = ["derive"] }
